k8s/paperless/tika-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tika
  namespace: paperless
spec:
  podSelector:
    matchLabels:
      app: tika
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: paperless
      ports:
        - protocol: TCP
          port: 9998
  egress: []
